fix z-index for enable-button and token overlay

--- a/src/client/scss/mixins/overlay.scss
+++ b/src/client/scss/mixins/overlay.scss
@@ -6,6 +6,7 @@
   top: 0;
   bottom: 0;
   height: 100%;
+  z-index: 1;
   .overlay.background {
     background: rgba($background, 0.8);
     display: block;
